fix: audit overflowMenu, fix destructive state

--- a/src/components/reusable/overflowMenu/overflowMenuItem.scss
+++ b/src/components/reusable/overflowMenu/overflowMenuItem.scss
@@ -28,7 +28,13 @@
   &:focus-visible {
     outline-color: var(--kd-color-border-variants-focus);
   }
+
+  &.destructive:focus-visible {
+    background-color: var(--kd-color-status-error-light);
+    outline-color: var(--kd-color-status-error-default);
+  }
 }
+
 .sr-only {
   @include visibility.sr-only;
 }
